<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Switch</string>
    <string name="auto_switching_service">Wifi and Bluetooth Switching</string>
    <string name="upsidedown_speaker">Upsidedown Speaker Mode</string>
    
    <string name="notify_suggestwifi_title">No Connection Available</string>
    <string name="notify_suggestwifi_description">Click here to turn on Wifi.</string>
    <string name="notify_suggestwifi_tickertext">No internet connection available. Try using Wifi.</string>
    
    <string name="PrefCategory_ToggleWifi">Wifi Auto Switching</string>
	    <string name="PrefTitle_ToggleWifiWhilePhoneOffHook">While Calling</string>
	    <string name="PrefDesc_ToggleWifiWhilePhoneOffHook">Turn on Wifi while on a call.</string>
	    
	    <string name="PrefTitle_ToggleWifiWhileCharging">While Charging</string>
	    <string name="PrefDesc_ToggleWifiWhileCharging">Turn on Wifi while the phone is charging.</string>
    
    
    <string name="PrefCategory_ToggleBluetooth">Bluetooth Auto Switching</string>
	    <string name="PrefTitle_ToggleBtWhilePhoneOffHook">While Calling</string>
	    <string name="PrefDesc_ToggleBtWhilePhoneOffHook">Turn on Bluetooth while on a call.</string>
	    
	    <string name="PrefTitle_ToggleBtWhileCharging">While Charging</string>
	    <string name="PrefDesc_ToggleBtWhileCharging">Turn on Bluetooth while the phone is charging.</string>
	    
    <string name="PrefCategory_SuggestWifi">Display Wifi Notification when&#8230;</string>
	    <string name="PrefTitle_SuggestWifiOnDisconnect">Disconnected</string>
	    <string name="PrefDesc_SuggestWifiOnDisconnect">Display notification to turn Wifi on when there is no network.</string>
	    
    <string name="PrefCategory_AboutApp">About Application</string>
	    <string name="PrefTitle_AboutApp">@string/app_name</string>
	    <string name="PrefDesc_AboutApp">Version: 2.0</string>
    
</resources>
